```protobuf
syntax = "proto3";

package payment;
option go_package = "paymentservice/pb";

message PaymentRequest {
    string order_id = 1;
    double amount = 2;
    string user_id = 3;
}

message PaymentResponse {
    string payment_id = 1;
    string order_id = 2;
    string status = 3;  // PENDING, SUCCESS, FAILED
    string message = 4;
}

service PaymentService {
    rpc ProcessPayment(PaymentRequest) returns (PaymentResponse) {}
    rpc RefundPayment(PaymentResponse) returns (PaymentResponse) {}
}
```